MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/Master_SLA__c.object-meta.xml
<CustomObject>
    <label>Master SLA</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Master_SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>