MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <label>Business Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact_Centre</fullName>
            </value>
            <value>
                <fullName>Default_Collection</fullName>
            </value>
            <value>
                <fullName>Property_Transfer_Services</fullName>
            </value>
            <value>
                <fullName>Real_Estate_Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>