MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>800 Modon</fullName>
            </value>
            <value>
                <fullName>Broker Cases</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Front Liner</fullName>
            </value>
            <value>
                <fullName>Joing Owner Addition</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Service Call Center</fullName>
            </value>
            <value>
                <fullName>Service Request Management -ADM</fullName>
            </value>
            <value>
                <fullName>Service Request Management -JO</fullName>
            </value>
            <value>
                <fullName>Service Request Management -Property Transfer OffPlan</fullName>
            </value>
            <value>
                <fullName>Service Request Management -Property Transfer Title Deed</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
                <isActive>false</isActive>
                <label>Customer Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>