MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP Case</fullName>
            </value>
            <value>
                <fullName>Non VIP Case</fullName>
            </value>
            <value>
                <fullName>Visitor Case</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>