MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Escalation_1_SLA__c.field-meta.xml
<CustomField>
    <fullName>Escalation_1_SLA__c</fullName>
    <label>Escalation 1 SLA</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>