MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Escalation_3_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation 3 Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalation_3_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>