MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/GroupLead__c.field-meta.xml
<CustomField>
    <fullName>GroupLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>