MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>