MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Is_Available_For_Extension__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_For_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Applicable</label>
    <type>Checkbox</type>
</CustomField>