MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>