MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>