MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>Response_SLA__c</fullName>
    <label>Response SLA</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>