MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/SLA_Hrs__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hrs__c</fullName>
    <label>SLA Hrs</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>