MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Follow Up</fullName>
            </value>
            <value>
                <fullName>Office Location/Working Hours</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Next of Kin</fullName>
            </value>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>ADM Fee Refund</fullName>
                <isActive>false</isActive>
                <label>ADM Fee Refund</label>
            </value>
            <value>
                <fullName>ADM Fee Waiver</fullName>
                <isActive>false</isActive>
                <label>ADM Fee Waiver</label>
            </value>
            <value>
                <fullName>ADM Fees</fullName>
                <isActive>false</isActive>
                <label>ADM Fees</label>
            </value>
            <value>
                <fullName>ADM Registration Service</fullName>
                <isActive>false</isActive>
                <label>ADM Registration Service</label>
            </value>
            <value>
                <fullName>ADM Waiver</fullName>
                <isActive>false</isActive>
                <label>ADM Waiver</label>
            </value>
            <value>
                <fullName>ADM/ADGM Registration</fullName>
                <isActive>false</isActive>
                <label>ADM/ADGM Registration</label>
            </value>
            <value>
                <fullName>Abu Dhabi Municipality</fullName>
                <isActive>false</isActive>
                <label>Abu Dhabi Municipality</label>
            </value>
            <value>
                <fullName>Addition/Deletion of Joint Owner</fullName>
                <isActive>false</isActive>
                <label>Addition/Deletion of Joint Owner</label>
            </value>
            <value>
                <fullName>Appointment Request</fullName>
                <isActive>false</isActive>
                <label>Appointment Request</label>
            </value>
            <value>
                <fullName>Bank Details</fullName>
                <isActive>false</isActive>
                <label>Bank Details</label>
            </value>
            <value>
                <fullName>Bounced Cheque</fullName>
                <isActive>false</isActive>
                <label>Bounced Cheque</label>
            </value>
            <value>
                <fullName>Broker Inquiries</fullName>
                <isActive>false</isActive>
                <label>Broker Inquiries</label>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
                <isActive>false</isActive>
                <label>Broker Portal</label>
            </value>
            <value>
                <fullName>Broker Registration</fullName>
                <isActive>false</isActive>
                <label>Broker Registration</label>
            </value>
            <value>
                <fullName>Cancel &amp; Refund</fullName>
                <isActive>false</isActive>
                <label>Cancel &amp; Refund</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Cancellation with Refund</fullName>
                <isActive>false</isActive>
                <label>Cancellation with Refund</label>
            </value>
            <value>
                <fullName>Cheque Replacement</fullName>
                <isActive>false</isActive>
                <label>Cheque Replacement</label>
            </value>
            <value>
                <fullName>Client Approvals</fullName>
                <isActive>false</isActive>
                <label>Client Approvals</label>
            </value>
            <value>
                <fullName>Commission Enquiries</fullName>
                <isActive>false</isActive>
                <label>Commission Enquiries</label>
            </value>
            <value>
                <fullName>Consolidation</fullName>
                <isActive>false</isActive>
                <label>Consolidation</label>
            </value>
            <value>
                <fullName>Construction Update</fullName>
                <isActive>false</isActive>
                <label>Construction Update</label>
            </value>
            <value>
                <fullName>Contact Details Update</fullName>
                <isActive>false</isActive>
                <label>Contact Details Update</label>
            </value>
            <value>
                <fullName>Customer Care</fullName>
                <isActive>false</isActive>
                <label>Customer Care</label>
            </value>
            <value>
                <fullName>Customer Data Privacy</fullName>
                <isActive>false</isActive>
                <label>Customer Data Privacy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>