MODON MRE BPDEV/force-app/main/default/objects/Master_SLA__c/listViews/Sales_Order_SLA.listView-meta.xml
<ListView>
    <fullName>Sales_Order_SLA</fullName>
    <columns>ObjectName__c</columns>
    <columns>NAME</columns>
    <columns>Case_Origin__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Is_Available_For_Extension__c</columns>
    <columns>IsActive__c</columns>
    <columns>SLA_Hrs__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>GroupName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Sales Order</value>
    </filters>
    <label>Sales Order SLA</label>
</ListView>